--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Programa em C para trabalhar com cônicas feito para a Disciplina de Geometria Analitica por Lourenço de S. Roselino e Milena C. da Silva
+Código em C para trabalhar com cônicas feito para a Disciplina de Geometria Analitica USP-ICMC por Lourenço de S. Roselino e Milena C. da Silva
+Realiza a translação e rotação em uma equação de segundo grau e identifica a forma da cônica
+
+@roselino-quatro
+@milenacsilva
